<resources>
    <string name="app_name">AircraftWar</string>
    <string name="MediumGame">普通模式</string>
    <string name="EasyGame">简单模式</string>
    <string name="HardGame">困难模式</string>
    <string name="music">音量</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="haveMusic">音效</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="rank">排行榜</string>
</resources>