<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mode_choose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/easy_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/EasyGame"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/medium_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/MediumGame"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/hard_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/HardGame"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <Switch
        android:id="@+id/music_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="150dp"
        android:gravity="center"
        android:text="@string/haveMusic"
        android:showText="true"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:checked="false"
        tools:gravity="center"
        tools:textSize="20sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>